[package]
authors = ["Matthew Treinish <mtreinish@kortar.org>"]
categories = ["development-tools::testing"]
description = "A subunit v2 protocol implementation in Rust"
edition = "2021"
keywords = ["subunit"]
license = "Apache-2.0"
name = "subunit"
readme = "README.md"
repository = "https://github.com/mtreinish/subunit-rust"
version = "0.2.0"

[dependencies]
byteorder = "1.3"
chrono = "0.4.11"
crc32fast = "1.3"
enumset = "1.1.3"
