[package]
authors = ["Matthew Treinish <mtreinish@kortar.org>"]
categories = ["development-tools::testing"]
description = "A subunit v2 protocol implementation in Rust"
edition = "2021"
keywords = ["subunit"]
license = "Apache-2.0"
name = "subunit"
readme = "README.md"
repository = "https://github.com/mtreinish/subunit-rust"
version = "0.2.0"

[features]
async = ["dep:async-stream", "dep:async-trait", "dep:tokio", "dep:tokio-stream"]
default = ["async", "sync"]
sync = []
v1 = ["async", "dep:winnow"]

[dependencies]
async-stream = { version = "0.3", optional = true }
async-trait = { version = "0.1.81", optional = true }
chrono = "0.4.38"
crc32fast = "1.3"
enumset = "1.1.3"
thiserror = "2.0.6"
tokio = { version = "1.0", optional = true, features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
winnow = { version = "0.7.0", optional = true, features = [] }

[dev-dependencies]
tokio-util = { version = "0.7.11" }
